--- a/MovieDB/Base.lproj/Main.storyboard
+++ b/MovieDB/Base.lproj/Main.storyboard
@@ -19,15 +19,15 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSi-AA-Ka5">
-                                            <rect key="frame" x="66" y="19" width="252" height="21"/>
+                                            <rect key="frame" x="86" y="19" width="232" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4c-rh-G2O">
-                                            <rect key="frame" x="8" y="5" width="50" height="50"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4c-rh-G2O">
+                                            <rect key="frame" x="8" y="5" width="70" height="50"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="50" id="FBt-Zk-7S1"/>
+                                                <constraint firstAttribute="width" constant="70" id="FBt-Zk-7S1"/>
                                                 <constraint firstAttribute="height" constant="50" id="Rqk-P2-cNU"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
@@ -64,12 +64,49 @@
                             <outlet property="delegate" destination="TKf-Ig-pEG" id="20c-z2-Qln"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Home" id="jyo-Rs-xFO"/>
+                    <navigationItem key="navigationItem" title="Home" id="jyo-Rs-xFO">
+                        <barButtonItem key="leftBarButtonItem" title="Previous" id="xYj-pd-eDD">
+                            <connections>
+                                <action selector="goPrevious:" destination="TKf-Ig-pEG" id="gdY-2F-TFU"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="udr-bT-h7a">
+                            <connections>
+                                <action selector="goNext:" destination="TKf-Ig-pEG" id="Fw1-ZQ-ZbL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNE-iq-Beh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-529" y="283"/>
+        </scene>
+        <!--Info-->
+        <scene sceneID="QvU-Fy-Thf">
+            <objects>
+                <viewController storyboardIdentifier="Info" title="Info" id="ceU-0j-qxq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yMS-Cz-vo9"/>
+                        <viewControllerLayoutGuide type="bottom" id="MzB-Kb-HFK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8KS-cF-9e3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Info" id="M9c-gl-Kdj">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="mC7-sF-PR7"/>
+                    </navigationItem>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J4I-IC-bbv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-11" y="283"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="nt3-cb-Tkw">
@@ -93,10 +130,10 @@
             </objects>
             <point key="canvasLocation" x="-1488" y="283"/>
         </scene>
-        <!--Home-->
+        <!--navHome-->
         <scene sceneID="c3L-mJ-hhP">
             <objects>
-                <navigationController title="Home" id="cM9-BW-2xd" sceneMemberID="viewController">
+                <navigationController title="navHome" id="cM9-BW-2xd" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="5QO-dy-6eg"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="luv-ck-iat">
